...

                            final _args = ChatDetailItemArguments(chat, itemId);
                            Navigator.of(context).pushReplacementNamed(
                                ChatDetailPage.routeNameWithItem,
                                arguments: _args);
                          },
                          text: 'CHAT PENJUAL',
                        ),
                      ),
                    ],
                  ),
                ),
              );
...
