...
          SliverToBoxAdapter(
            child: Padding(
              padding: const EdgeInsets.all(16.0),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  Text('REKOMENDASI',
                      style:
                          blackTitle.copyWith(fontSize: 32, letterSpacing: 5)),
                  SizedBox(
                    height: 500,
                    child: StreamBuilder<List<QueryDocumentSnapshot<Item>>>(
                      stream: ItemService.getEveryItems(FirebaseFirestore.instance),
...
